<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_analytics"
        android:title="@string/nav_dashboard"/>

    <item
        android:id="@+id/nav_properties"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_properties"/>

    <item
        android:id="@+id/nav_applications"
        android:icon="@drawable/ic_fill_favorite"
        android:title="@string/nav_applications"/>

    <item
        android:id="@+id/nav_payments"
        android:icon="@drawable/ic_lease"
        android:title="@string/nav_payments"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_profile"/>

</menu>
